feat: Implement get campaign requests route
